# Lumen

./: .gitignore
mcp-scanner/: .env.example  OPENROUTER_PRIVACY_FIX.md  README.md  main.py  pyproject.toml  requirements.txt  scan_results.json  server.py  test_detailed_threats.json  test_llm_connection.py  test_log_buffer.py  test_mcp_scan.json  test_mcp_scan.py  test_scan.py  test_scan_results.json  test_scanner.py  test_security_checklist.json  verify_browser.py  verify_server.py
mcp-scanner/examples/: example_dangerous_server.py  example_safe_server.py  sample_scan_output.json
mcp-scanner/frontend/: dashboard.html
mcp-scanner/scanner/: __init__.py  analyzer.py  cli.py  config.py  discovery.py  formatter.py  llm.py  manifest.py
mcp-scanner/static/: index.html
